--- a/css/custom.css
+++ b/css/custom.css
@@ -2,3 +2,17 @@
     margin-top : 10px;
     text-align: center;
 }
+
+button.down-btn{
+    width: 100%;
+    margin-top: 10px;
+}
+
+.btn-group-vertical{
+    width: 100%;
+}
+
+.btn-group-vertical>.btn+.btn, .btn-group-vertical>.btn+.btn-group, .btn-group-vertical>.btn-group+.btn, .btn-group-vertical>.btn-group+.btn-group {
+    margin-top: 10px;
+
+}
